[package]
name = "bevy_renet_transport_naia_webrtc"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_renet = "0.0.11"
renet_transport_naia_webrtc_client = { path = "../renet_transport_naia_webrtc_client", features=["bevy"] }
