[package]
name = "renet-transport-naia-webrtc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
renet = "0.0.13"
renetcode = "0.0.9"
log = "0.4.17"
naia-client-socket = { version="0.20.1", features = ["wbindgen"] }

bevy_ecs = { version = "0.11.0", optional = true }


