[package]
name = "renet_transport_naia_webrtc_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
renet = "0.0.15"
renetcode = "0.0.11"
log = "0.4.17"
naia-server-socket = "0.22.0"

bevy_ecs = { version = "0.12.1", optional = true }
